# aip

./: .gitignore  README.ko.md  README.md  benchmark.sh  pyproject.toml
aip/: __init__.py  bundle.py  cli.py  codec.py  external_ai.py  ollama.py  server.py
aip/web/: index.html
