[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-package"
version = "0.1.0"
description = "AIP dictionary compression with optional Ollama-assisted pattern selection"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
aip = "aip.cli:main"

[tool.setuptools]
packages = ["aip"]

[tool.setuptools.package-data]
aip = ["web/*.html"]

